# groq_ai

./: .gitignore  README.md  models.json  perguntas_respostas.json  pyproject.toml  to-do.txt
groq_ai/: app.py  get_tipos_ia_disponiveis.py
